docs: [#2] windows 환경 docker-compose 셋팅 추가

--- a/docker/docker-compose-local-m.yml
+++ b/docker/docker-compose-local-m.yml
@@ -13,3 +13,4 @@ services:
     command:
       - --character-set-server=utf8mb4
       - --collation-server=utf8mb4_unicode_ci
+    platform: linux/amd64
