--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,9 +1,18 @@
 spring:
+  application:
+    name: learnable
+  cloud:
+    vault:
+      scheme: http
+      authentication: TOKEN
+      token: ${VAULT_TOKEN}
+  config:
+    import: vault://
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
-    url: jdbc:mysql://localhost:3306/learnable?characterEncoding=UTF-8&serverTimeZone=Asia/Seoul
-    password: learnable-1234
+    username: ${LOCAL_DB_USERNAME}
+    url: ${LOCAL_DB_URL}
+    password: ${LOCAL_DB_PASSWORD}
 
   jpa:
     hibernate:
