feature: [#12] docker-compose mysql 한글 깨짐 현상 해결

--- a/docker/docker-compose-local.yml
+++ b/docker/docker-compose-local.yml
@@ -10,6 +10,5 @@ services:
       - MYSQL_DATABASE=learnable
       - MYSQL_ROOT_PASSWORD=learnable-1234
       - TZ=Asia/Seoul
-    command:
-      - --character-set-server=utf8mb4
-      - --collation-server=utf8mb4_unicode_ci
+    volumes:
+      - ./config:/etc/mysql/conf.d
