--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -6,9 +6,13 @@ spring:
     password: learnable-1234
 
   jpa:
+    defer-datasource-initialization: true
     hibernate:
       ddl-auto: create
     show-sql: true
     properties:
       hibernate:
         format_sql: true
+  sql:
+    init:
+      mode: always
