deploy 배포 yml 1차 수정

--- a/.github/workflows/deploy-gpteacher.yml
+++ b/.github/workflows/deploy-gpteacher.yml
@@ -26,7 +26,7 @@ jobs:
         run: chmod +x gradlew
       
       - name: Spring-application build 
-        run: ./gradlew build
+        run: ./gradlew bootJar
       
 
        # Docker
