--- a/.github/workflows/deploy-gpteacher.yml
+++ b/.github/workflows/deploy-gpteacher.yml
@@ -40,7 +40,7 @@ jobs:
         run: chmod +x gradlew
       
       - name: Spring-application build 
-        run: ./gradlew build
+        run: ./gradlew bootJar
       
 
        # Docker
